add links in anchor tag

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   <header>
     <nav class="navbar is-link">
       <div class="navbar-brand">
-        <a href="/" class="navbar-item is-size-4">I.T.C Course Website</a>
+        <a href="./index.html" class="navbar-item is-size-4">I.T.C Course Website</a>
       </div>
 
       <div class="navbar-menu">
         <div class="navbar-start">
           <div class="navbar-item has-dropdown is-hoverable">
-            <a href="/" class="navbar-link">Assignments</a>
+            <a class="navbar-link">Assignments</a>
             <div class="navbar-dropdown"><a href="#" class="navbar-item">Assignment #1 - Conversion (Celsius to Fahrenheit, Fahrenheit to Celsius, Meters to Feet, Feet to
               Meters)</a><a href="#" class="navbar-item">Assignment #2 - Income Tax Calculator</a><a href="#" class="navbar-item">Assignment #3 - Factorial (While Loop), Sum (Do While Loop) and Average (For Loop) of First N Natural
                 Numbers</a><a href="#" class="navbar-item">Assignment #4 - Simple Payroll</a></div>
