--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 >Assignment #1 - Conversion (Celsius to Fahrenheit, Fahrenheit to Celsius, Meters to Feet, Feet to
                 Meters)</a
               ><a href="#" class="navbar-item">Assignment #2 - Income Tax Calculator</a
-              ><a href="#" class="navbar-item"
+              ><a href="./assignments html/assignment-3.html" class="navbar-item"
                 >Assignment #3 - Factorial (While Loop), Sum (Do While Loop) and Average (For Loop) of First N Natural
                 Numbers</a
               ><a href="#" class="navbar-item">Assignment #4 - Simple Payroll</a>
