List done wihtout delete

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               ><a href="./assignments html/assignment-3.html" class="navbar-item"
                 >Assignment #3 - Factorial (While Loop), Sum (Do While Loop) and Average (For Loop) of First N Natural
                 Numbers</a
-              ><a href="#" class="navbar-item">Assignment #4 - Simple Payroll</a>
+              ><a href="./assignments html/assignment-4.html" class="navbar-item">Assignment #4 - Simple Payroll</a>
             </div>
           </div>
         </div>
@@ -62,10 +62,10 @@
         </div>
 
         <div class="block my-6">
-          <h3>Assignments To Be Completed (clickable link)</h3>
+          <h3>Assignments (clickable link)</h3>
           <ul>
             <li>
-              <a href="#" class="has-text-black"
+              <a href="./assignments html/assignment-1.html" class="has-text-black"
                 ><strong
                   >Assignment #1 - Conversion (Celsius to Fahrenheit, Fahrenheit to Celsius, Meters to Feet, Feet to
                   Meters)</strong
@@ -76,7 +76,7 @@
               <a href="#" class="has-text-black"><strong>Assignment #2 - Income Tax Calculator</strong></a>
             </li>
             <li>
-              <a href="#" class="has-text-black"
+              <a href="./assignments html/assignment-3.html" class="has-text-black"
                 ><strong
                   >Assignment #3 - Factorial (While Loop), Sum (Do While Loop) and Average (For Loop) of First N Natural
                   Numbers</strong
@@ -84,7 +84,9 @@
               >
             </li>
             <li>
-              <a href="#" class="has-text-black"><strong>Assignment #4 - Simple Payroll</strong></a>
+              <a href="./assignments html/assignment-4.html" class="has-text-black"
+                ><strong>Assignment #4 - Simple Payroll</strong></a
+              >
             </li>
           </ul>
         </div>
