--- a/assignments html/assignment-3.html
+++ b/assignments html/assignment-3.html
@@ -26,7 +26,7 @@
               ><a href="./assignment-3.html" class="navbar-item"
                 >Assignment #3 - Factorial (While Loop), Sum (Do While Loop) and Average (For Loop) of First N Natural
                 Numbers</a
-              ><a href="#" class="navbar-item">Assignment #4 - Simple Payroll</a>
+              ><a href="./assignment-4.html" class="navbar-item">Assignment #4 - Simple Payroll</a>
             </div>
           </div>
         </div>
