done with the assignment 2

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
               <a href="./assignments html/assignment-1.html" class="navbar-item"
                 >Assignment #1 - Conversion (Celsius to Fahrenheit, Fahrenheit to Celsius, Meters to Feet, Feet to
                 Meters)</a
-              ><a href="#" class="navbar-item">Assignment #2 - Income Tax Calculator</a
+              ><a href="./assignments html/assignment-2.html" class="navbar-item"
+                >Assignment #2 - Income Tax Calculator</a
               ><a href="./assignments html/assignment-3.html" class="navbar-item"
                 >Assignment #3 - Factorial (While Loop), Sum (Do While Loop) and Average (For Loop) of First N Natural
                 Numbers</a
@@ -73,7 +74,9 @@
               >
             </li>
             <li>
-              <a href="#" class="has-text-black"><strong>Assignment #2 - Income Tax Calculator</strong></a>
+              <a href="./assignments html/assignment-2.html" class="has-text-black"
+                ><strong>Assignment #2 - Income Tax Calculator</strong></a
+              >
             </li>
             <li>
               <a href="./assignments html/assignment-3.html" class="has-text-black"
