--- a/assignments html/assignment-4.html
+++ b/assignments html/assignment-4.html
@@ -22,7 +22,7 @@
               <a href="./assignment-1.html" class="navbar-item"
                 >Assignment #1 - Conversion (Celsius to Fahrenheit, Fahrenheit to Celsius, Meters to Feet, Feet to
                 Meters)</a
-              ><a href="#" class="navbar-item">Assignment #2 - Income Tax Calculator</a
+              ><a href="./assignment-2.html" class="navbar-item">Assignment #2 - Income Tax Calculator</a
               ><a href="./assignment-3.html" class="navbar-item"
                 >Assignment #3 - Factorial (While Loop), Sum (Do While Loop) and Average (For Loop) of First N Natural
                 Numbers</a
