--- a/assignments html/assignment-4.html
+++ b/assignments html/assignment-4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Assignment #3 (Conversion)</title>
+    <title>Assignment #4 - Simple Payroll</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css" />
     <link rel="stylesheet" href="../styles.css" />
   </head>
